Fix posix_spawn